--- a/src/skin/options.css
+++ b/src/skin/options.css
@@ -2,7 +2,7 @@ row > label
 {
    width: 4em;
    height: 1.5em;
-   border: 0.0625em solid black;
+   border: 0.0625em solid #000;
    background-color: palegreen;
 }
 
@@ -25,4 +25,9 @@ row > label
 #incompatibleLabel
 {
    background-color: #ff8e9b;
+}
+
+#restartlessLabel
+{
+   background: url("chrome://{appname}/skin/images/star.png") no-repeat top right;
 }
