Added option to select all de-/activated restartless addons.

--- a/src/skin/options.css
+++ b/src/skin/options.css
@@ -29,5 +29,6 @@ row > label
 
 #restartlessLabel
 {
+   border: 0;
    background: url("chrome://{appname}/skin/images/star.png") no-repeat top right;
 }
